[package]
name = "espronceda"
version = "0.1.0"
authors = ["uhyo <uhyo@uhy.ooo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.40"
thiserror = "^1.0.25"
swc_ecma_parser = "^0.57.1"
swc_ecma_ast = "^0.45.0"
swc_common = { version = "^0.10.20",  features=["tty-emitter"] }
swc_ecma_visit = "^0.31.0"
